# ohtu

osa2/nhl-statistics-1/: .coverage
osa2/nhl-statistics-1/src/: index.py  statistics_service.py
osa2/nhl-statistics-1/src/tests/: statistics_service_test.py
osa2/poetry-web/: pyproject.toml
osa2/project-reader/: pyproject.toml
osa2/project-reader/src/: index.py  project.py  project_reader.py
osa2/riippuvuuksien-injektointi-1/: pyproject.toml
osa3/hello-docker/: Dockerfile
osa3/hello-robot/: log.html  output.xml  report.html
osa3/login-robot/: log.html  output.xml  report.html
osa3/login-robot/src/: .AppLibrary.py.swp
osa3/login-robot/src/services/: user_service.py
osa3/login-robot/src/tests/: login.robot  register.robot
osa4/maksukortti-mock/src/: .kassapaate.py.swp
osa4/maksukortti-mock/src/tests/: .kassapaate_test.py.swp  kassapaate_test.py
