[tool.poetry]
name = "project-reader"
version = "0.1.0"
description = "Sovellus joka toimii testisyötteenä ohtun osan 2 laskareihin"
authors = ["aleksi sulasalmi <sulasaal@jyu.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)"
]
